--- a/ino/make/Makefile.jinja
+++ b/ino/make/Makefile.jinja
@@ -38,9 +38,11 @@ include {{ target.path|depsname }}
 {% for source_dir, target in libs.items() %}
 {% set c = source_dir|glob('*.c')|filemap(target.dirname, e.names.obj) %}
 {% set cpp = (source_dir|glob('*.cpp'))|filemap(target.dirname, e.names.obj) %}
-{% set libobjs = c.target_paths() + cpp.target_paths() %}
+{% set S = (source_dir|glob('*.S'))|filemap(target.dirname, e.names.obj) %}
+{% set libobjs = c.target_paths() + cpp.target_paths() + S.target_paths() %}
 {{ compile_c(c) }}
 {{ compile_cpp(cpp) }}
+{{ compile_S(S) }}
 {{ target.path }} : {{ libobjs }}
 	@echo {{ ('Linking ' ~ target.filename|basename)|colorize('green') }}
 	{{v}}{{ e.ar }} rcs $@ $^
